force-app/main/default/objects/Contract/fields/Additional_Indemnity_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Indemnity_Obligation__c</fullName>
    <label>Additional Indemnity Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>