force-app/main/default/objects/Contract/fields/CCPA__c.field-meta.xml
<CustomField>
    <fullName>CCPA__c</fullName>
    <label>CCPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>