force-app/main/default/objects/Contract/fields/Company_Indemnification_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Company_Indemnification_Obligation__c</fullName>
    <label>Company Indemnification Obligation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>