force-app/main/default/objects/Contract/fields/Contract_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Template_Type__c</fullName>
    <label>Contract Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Culture Amp Service Order</fullName>
            </value>
            <value>
                <fullName>Culture Amp (negotiated/MSA)</fullName>
            </value>
            <value>
                <fullName>Third-party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>