force-app/main/default/objects/Contract/fields/Culture_Amp_Entity__c.field-meta.xml
<CustomField>
    <fullName>Culture_Amp_Entity__c</fullName>
    <label>Culture Amp Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Culture Amp Inc</fullName>
            </value>
            <value>
                <fullName>Gmbh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>