force-app/main/default/objects/Contract/fields/DPA_Data_Centre__c.field-meta.xml
<CustomField>
    <fullName>DPA_Data_Centre__c</fullName>
    <label>DPA Data Centre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>