force-app/main/default/objects/Contract/fields/DPA_region_specific__c.field-meta.xml
<CustomField>
    <fullName>DPA_region_specific__c</fullName>
    <label>DPA (Region Specific)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>