force-app/main/default/objects/Contract/fields/Initial_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Length__c</fullName>
    <label>Initial Term Length (Billing Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>