force-app/main/default/objects/Contract/fields/Licensing_Language__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Language__c</fullName>
    <label>Licensing Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Preapproved Anonymized Clause</fullName>
            </value>
            <value>
                <fullName>Other Use of Anonymized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>