force-app/main/default/objects/Contract/fields/Limitation_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_Liability__c</fullName>
    <label>Limitation of Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;/=5x</fullName>
            </value>
            <value>
                <fullName>6x&gt;9x</fullName>
            </value>
            <value>
                <fullName>10x+</fullName>
            </value>
            <value>
                <fullName>1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>