force-app/main/default/objects/Contract/fields/Limitation_of_Liability_Uncapped_Confi__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_Liability_Uncapped_Confi__c</fullName>
    <inlineHelpText>Confidentiality or Data Breach</inlineHelpText>
    <label>Limitation of Liability (Uncapped)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>