force-app/main/default/objects/Contract/fields/Organic_Growth__c.field-meta.xml
<CustomField>
    <fullName>Organic_Growth__c</fullName>
    <label>Organic Growth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>