force-app/main/default/objects/Contract/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due upon receipt</fullName>
            </value>
            <value>
                <fullName>Net 30 or 45</fullName>
            </value>
            <value>
                <fullName>&gt; 60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>