force-app/main/default/objects/Contract/fields/Pricing_and_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Pricing_and_Packaging__c</fullName>
    <label>Pricing and Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Grandfathered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>