force-app/main/default/objects/Contract/fields/Publicity_Consent_logo_usage__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Consent_logo_usage__c</fullName>
    <label>Publicity Consent (Logo Usage)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prior Permission (Req&apos;d)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>