force-app/main/default/objects/Contract/fields/Redline_20k__c.field-meta.xml
<CustomField>
    <fullName>Redline_20k__c</fullName>
    <label>Redline &lt; 20k</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>