force-app/main/default/objects/Contract/fields/Term_for_Convenience_Client__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Convenience_Client__c</fullName>
    <label>Term for Convenience - Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>