force-app/main/default/objects/Contract/fields/Version_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Version_of_Terms__c</fullName>
    <label>Version of Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Version &lt;2020</fullName>
            </value>
            <value>
                <fullName>Version = 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>